SEBSP-210 live screenshot data cache PoC impl finished